--- a/src/index.css
+++ b/src/index.css
@@ -95,3 +95,90 @@
     min-width: 230px;
   }
 }
+
+@media print {
+  /* Hide unwanted elements when printing */
+  button,
+  .overlay,
+  .overlay-arrows_left,
+  .overlay-arrows_right,
+  .overlay > span {
+    display: none !important;
+  }
+
+  /* Set page size, margins, and layout */
+  @page {
+    size: auto;
+    margin: 20mm;
+  }
+
+  body {
+    margin: 20mm;
+  }
+
+  /* Properly format the table without selectors */
+  /* Customize the styles as needed */
+  .main-table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-bottom: 20px;
+  }
+
+  .main-table th,
+  .main-table td {
+    border: 1px solid #000;
+    padding: 8px;
+    text-align: left;
+  }
+
+  .main-table th {
+    background-color: #f2f2f2;
+    font-weight: bold;
+  }
+
+  .main-table tr:nth-child(even) {
+    background-color: #f2f2f2;
+  }
+
+  /* Handle page breaks */
+  .table-wrapper {
+    page-break-inside: avoid;
+  }
+
+  .table-breakdown {
+    width: 100%;
+  }
+  .table-breakdown td,
+  .table-breakdown th {
+    width: 20%;
+  }
+
+  .table-breakdown td,
+  .table-breakdown th {
+    text-align: center;
+    border-left: 1px dashed grey;
+    border-right: 1px dashed grey;
+    border-top: none;
+    border-bottom: none;
+  }
+
+  .table-breakdown th {
+    border-bottom: 2px solid grey;
+  }
+  .table-breakdown td:first-child,
+  .table-breakdown th:first-child {
+    border-left: none;
+    border-top: none;
+  }
+  .table-breakdown td:last-child,
+  .table-breakdown th:last-child {
+    border-right: none;
+  }
+  .table-breakdown tr:first-child th {
+    border-top: 1px solid grey;
+    border-bottom: 2px solid grey;
+  }
+  .table-breakdown tr:last-child td {
+    border-bottom: 1px solid grey;
+  }
+}
