--- a/src/index.css
+++ b/src/index.css
@@ -162,23 +162,18 @@
     border-bottom: none;
   }
 
-  .table-breakdown th {
-    border-bottom: 2px solid grey;
-  }
   .table-breakdown td:first-child,
   .table-breakdown th:first-child {
     border-left: none;
     border-top: none;
   }
+
   .table-breakdown td:last-child,
   .table-breakdown th:last-child {
     border-right: none;
   }
-  .table-breakdown tr:first-child th {
-    border-top: 1px solid grey;
-    border-bottom: 2px solid grey;
-  }
-  .table-breakdown tr:last-child td {
+
+  .table-heading-underline {
     border-bottom: 1px solid grey;
   }
 }
