pdf rendering and printing enhanced

--- a/src/index.css
+++ b/src/index.css
@@ -202,6 +202,11 @@
   }
 
   .page-break-after {
-    break-after: page !important;
+    break-after: avoid !important;
+  }
+
+  .page-number {
+    display: inline-block !important;
+    padding-top: 10px;
   }
 }
