RichParagraph darkmode text fixed

--- a/src/components/atoms/RichParagraph.module.css
+++ b/src/components/atoms/RichParagraph.module.css
@@ -1,6 +1,8 @@
 /* custom-quill-styles.css */
 .custom-font .ql-container.ql-snow * {
   font-family: inherit;
+  /* in dark mode , the font color is white */
+  color: #fff !important;
 }
 
 /* custom-quill-styles.css */
